Refactor EditStudentCommand